--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -15,3 +15,14 @@ jobs:
           BRANCH: gh-pages # 存放产物的分支名称
           FOLDER: dist # 存放build后产物的目录
           BUILD_SCRIPT: npm install && npm run build # 执行的命令
+
+      - name: Sync to Gitee
+        uses: wearerequired/git-mirror-action@master
+        env:
+          # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+        with:
+          # 注意替换为你的 GitHub 源仓库地址
+          source-repo: "git@github.com:heartaotime/JK.git"
+          # 注意替换为你的 Gitee 目标仓库地址
+          destination-repo: "git@gitee.com:heartaotime/JK.git"
