--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -16,11 +16,11 @@ jobs:
           FOLDER: dist # 存放build后产物的目录
           BUILD_SCRIPT: npm install && npm run build # 执行的命令
 
-      - name: Mirror the Github organization repos to Gitee.
-        uses: Yikun/hub-mirror-action@master
-        with:
-          src: github/JK
-          dst: gitee/JK
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-          dst_token: ${{ secrets.GITEE_TOKEN }}
-          account_type: user
+#      - name: Mirror the Github organization repos to Gitee.
+#        uses: Yikun/hub-mirror-action@master
+#        with:
+#          src: github/heartaotime@foxmail.com
+#          dst: gitee/heartaotime@foxmail.com
+#          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+#          dst_token: ${{ secrets.GITEE_TOKEN }}
+#          account_type: user
