--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -16,6 +16,12 @@ jobs:
           FOLDER: dist # 存放build后产物的目录
           BUILD_SCRIPT: npm install && npm run build # 执行的命令
 
+      - name: 'Mirror to gitee'
+        uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: git@gitee.com:heartaotime/JK.git
+          ssh_private_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+
 #      - name: Mirror the Github organization repos to Gitee.
 #        uses: Yikun/hub-mirror-action@master
 #        with:
