--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -16,11 +16,27 @@ jobs:
           FOLDER: dist # 存放build后产物的目录
           BUILD_SCRIPT: npm install && npm run build # 执行的命令
 
-      - name: 'Mirror to gitee'
-        uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url: git@gitee.com:heartaotime/JK.git
-          ssh_private_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+      - name: Sync to Gitee
+        uses: wearerequired/git-mirror-action@master
+        env:
+          # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
+          with:
+            # 注意替换为你的 GitHub 源仓库地址
+            source-repo: "git@github.com:heartaotime/JK.git"
+            # 注意替换为你的 Gitee 目标仓库地址
+            destination-repo: "git@gitee.com:heartaotime/JK.git"
+
+
+
+#      - name: 'Mirror to gitee'
+#        uses: pixta-dev/repository-mirroring-action@v1
+#        with:
+#          target_repo_url: git@gitee.com:heartaotime/JK.git
+#          ssh_private_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+
+
+
 
 #      - name: Mirror the Github organization repos to Gitee.
 #        uses: Yikun/hub-mirror-action@master
