--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -8,13 +8,22 @@ jobs:
       - name: checkout
         uses: actions/checkout@master # 将代码拷贝到虚机中
 
-      - name: buildAndDeploy
-        uses: JamesIves/github-pages-deploy-action@master
+      - name: vuepress-deploy
+        uses: jenkey2011/vuepress-deploy@master
         env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
-          BRANCH: gh-pages # 存放产物的分支名称
-          FOLDER: dist # 存放build后产物的目录
-          BUILD_SCRIPT: npm install && npm run build # 执行的命令
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TARGET_REPO: heartaotime/JK
+          TARGET_BRANCH: master
+          BUILD_SCRIPT: yarn && yarn build
+          BUILD_DIR: dist/
+
+      #      - name: buildAndDeploy
+      #        uses: JamesIves/github-pages-deploy-action@master
+      #        env:
+      #          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
+      #          BRANCH: gh-pages # 存放产物的分支名称
+      #          FOLDER: dist # 存放build后产物的目录
+      #          BUILD_SCRIPT: npm install && npm run build # 执行的命令
 
       - name: Sync to Gitee
         uses: wearerequired/git-mirror-action@master
