--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -13,7 +13,7 @@ jobs:
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: heartaotime/JK
-          TARGET_BRANCH: pages
+          TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn && yarn build
           BUILD_DIR: dist/
 
@@ -29,7 +29,7 @@ jobs:
           destination-repo: "git@gitee.com:heartaotime/JK.git"
 
       - name: Build Gitee Pages
-        uses: yanglbme/gitee-pages-action@master
+        uses: yanglbme/gitee-gh-pages-action@master
         with:
           # 注意替换为你的 Gitee 用户名
           gitee-username: heartaotime
@@ -37,4 +37,4 @@ jobs:
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           # 注意替换为你的 Gitee 仓库
           gitee-repo: heartaotime/JK
-          branch: pages
+          branch: gh-pages
