--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.19.2",
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
+        "vuedraggable": "^2.23.2",
         "vuex": "^3.4.0"
     },
     "devDependencies": {
