--- a/.github/workflows/buildAndDeploy.yml
+++ b/.github/workflows/buildAndDeploy.yml
@@ -12,7 +12,7 @@ jobs:
         uses: jenkey2011/vuepress-deploy@master
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          TARGET_REPO: heartaotime/JK
+          TARGET_REPO: heartaotime/jk
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn && yarn build
           BUILD_DIR: dist/
@@ -24,9 +24,9 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
         with:
           # 注意替换为你的 GitHub 源仓库地址
-          source-repo: "git@github.com:heartaotime/JK.git"
+          source-repo: "git@github.com:heartaotime/jk.git"
           # 注意替换为你的 Gitee 目标仓库地址
-          destination-repo: "git@gitee.com:heartaotime/JK.git"
+          destination-repo: "git@gitee.com:heartaotime/jk.git"
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@master
@@ -36,5 +36,5 @@ jobs:
           # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           # 注意替换为你的 Gitee 仓库
-          gitee-repo: heartaotime/JK
+          gitee-repo: heartaotime/jk
           branch: gh-pages
