--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
+        "compression-webpack-plugin": "^4.0.0",
         "core-js": "^3.6.5",
         "vue": "^2.6.11",
         "vuedraggable": "^2.23.2",
         "vuex": "^3.4.0"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.4.0",
+        "@vue/cli-plugin-babel": "^4.4.6",
         "@vue/cli-plugin-eslint": "~4.4.0",
-        "@vue/cli-service": "~4.4.0",
+        "@vue/cli-service": "^4.4.6",
         "babel-eslint": "^10.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
