--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "jk",
-    "version": "0.1.0",
+    "version": "0.0.1",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "dev": "vue-cli-service serve",
+        "build:prod": "vue-cli-service build",
+        "build:stage": "vue-cli-service build --mode staging",
+        "preview": "node build/index.js --preview",
+        "lint": "eslint --ext .js,.vue src"
     },
     "dependencies": {
         "axios": "^0.19.2",
